<resources>
    <string name="app_name">CardsDeck</string>
    <string name="start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_new_card">Pick a new card</string>
    <string name="how_many_decks">How many decks?</string>
    <string name="achievements">Achievements:</string>
    <string name="please_shuffle">"Please shuffle  the decks.."</string>
    <string name="internet_check">"Please check internet connetion…"</string>
    <string name="are_you_sure_shuffle">"Are you sure to shuffle the decks?"</string>
    <string name="figury">"FIGURY"</string>
    <string name="kolor_czarny">"KOLOR CZARNY"</string>
    <string name="kolor_czerwony">"KOLOR CZERWONY"</string>
    <string name="blizniaki">"BLIŻNIAKI"</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here!</string>
    <string name="register_user">Register User</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signin">SignIn</string>
    <string name="not_have_an_account_create_here">Not have an account? Create here.</string>
    <string name="user_login">User Login</string>
    <string name="user_registration">User Registration</string>
</resources>
