<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.company.andrzej.rolki.cardsdeck.MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/welcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center" />

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/decks_ammount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/how_many_decks"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Spinner
            android:id="@+id/spinnerDecks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="26sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <Button
            android:id="@+id/get_next_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pick_a_new_card" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:scrollbars="vertical" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_achievement_colorB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_achie_black"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_achievement_colorR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_achie_red"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_achievement_twins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_achie_stairs"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_achievement_figures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_achie_figures"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>
